--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -47,7 +47,7 @@
                 <div class="home__social">
                     <a href="https://linkedin.com/in/Ragunath23" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://x.com/RaghuOfficial23" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
-                    <a href="https://github.com/SabariVasan2536" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://github.com/RaghuOfficial23" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
